upgrade to 3.6; add @ in numpy

--- a/L0 - python3 and jupyter.ipynb
+++ b/L0 - python3 and jupyter.ipynb
@@ -25,9 +25,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Download and install the `anaconda` installation package (for `python 3.x`) at https://www.continuum.io/downloads\n",
-    "2. Create a `py34` virtual environment by `conda create -n py34 python=3.4 anaconda`. See more at http://conda.pydata.org/docs/using/envs.html\n",
-    "3. Activiate `py34` (or put it on your `~/.bashrc`): `source activate py34`\n",
+    "1. Download and install the `anaconda` installation package (for `python 3.6`) at https://www.continuum.io/downloads\n",
+    "2. Create a `py36` virtual environment by `conda create -n py36 python=3.6 anaconda`. See more at http://conda.pydata.org/docs/using/envs.html\n",
+    "3. Activiate `py36` (or put it on your `~/.bashrc`): `source activate py36`\n",
     "4. To install a new package in an environment, switch to it and use `conda install -n PACKAGENAME` or `pip install PACKAGENAME`\n",
     "5. Install `jupyter` by `conda install jupyter`\n"
    ]
@@ -45,9 +45,9 @@
    "source": [
     "```\n",
     "% python -V\n",
-    "Python 3.4.3 :: Anaconda 2.3.0 (x86_64)\n",
+    "Python 3.6.3 :: Anaconda ...\n",
     "% ipython -V\n",
-    "5.0.0\n",
+    "6.1.0\n",
     "% jupyter notebook\n",
     "```\n",
     "\n",
@@ -94,9 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -121,7 +119,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -166,7 +164,6 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -390,6 +387,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Exercise"
    ]
   },
@@ -420,9 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -566,9 +586,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.5"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
